@@ -1,4 +1,4 @@
-description ppp over gtp
+description ipv6 over gtp
 
 addrouter r1
 int eth1 eth 0000.0000.1111 $1a$ $1b$
@@ -14,15 +14,15 @@ int eth1
 int lo0
  vrf for v1
  ipv4 addr 4.4.4.4 255.255.255.255
+ ipv6 addr 4444::4 ffff::
  exit
 ipv4 pool p4 2.2.2.1 0.0.0.1 254
+ipv6 pool p6 2222::1111 ::1 254
 int di1
- enc ppp
+ enc iponly
  vrf for v1
- ipv4 addr 2.2.2.0 255.255.255.255
- ppp ip4cp local 2.2.2.0
- ipv4 pool p4
- ppp ip4cp open
+ ipv6 addr 2222::0 ffff::
+ ipv6 pool p6
  exit
 server gtp gtp
  clone di1
@@ -44,15 +44,11 @@ int eth1
  ipv4 addr 1.1.1.2 255.255.255.0
  ipv6 addr 1234::2 ffff::
  exit
-prefix-list p1
- permit 0.0.0.0/0
- exit
 int di1
+ enc iponly
  vrf for v1
- ipv4 addr 3.3.3.3 255.255.255.128
- ppp ip4cp open
- ppp ip4cp local 0.0.0.0
- ipv4 gateway-prefix p1
+ ipv4 addr 3.3.3.3 0.0.0.0
+ ipv6 addr 3333::3333 ::
  exit
 vpdn gtp
  int di1
@@ -66,15 +62,5 @@ vpdn gtp
 !
 
 
-r2 tping 100 60 2.2.2.0 /vrf v1
-r2 tping 100 5 4.4.4.4 /vrf v1
-
-r2 output show inter dia1 full
-output ../binTmp/conn-gtp.html
-<html><body bgcolor="#000000" text="#FFFFFF" link="#00FFFF" vlink="#00FFFF" alink="#00FFFF">
-here is the interface:
-<pre>
-<!>show:0
-</pre>
-</body></html>
-!
+r2 tping 100 60 4444::4 /vrf v1
+r2 tping 0 5 4.4.4.4 /vrf v1
