@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.3.3-cur, done by cs@nop.
--;-;-;2022-03-03 07:52:43, took 00:06:59, with 100 workers, on 2764 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2022-03-03 08:15:42, took 00:08:12, with 100 workers, on 2764 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
